# AgentBow

./: .gitignore  CLAUDE.md  Launch Bow.bat  README.md  Rebuild All.bat  Rebuild Bow.bat  Rebuild Extension.bat  bow-desktop.exe.lnk  bow.bat  get-llama.ps1  kill-bow.bat  setup.ps1
design/: Agent 008 - Cockpit.dc.html  README.md  design-tokens.css
desktop/: index.html  mcp.json  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: anthropic.rs  auth.rs  host.rs  http.rs  lib.rs  llm_engine.rs  local_llm.rs  main.rs  router.rs  server.rs  state.rs  types.rs  util.rs  web_api.rs
desktop/src-tauri/src/tools/: browser.rs  controlled_browser.rs  file_ops.rs  image_curate.rs  image_search.rs  mcp.rs  memory.rs  mod.rs  recipe.rs  shell_exec.rs  shell_session.rs  web_search.rs
desktop/src/styles/: globals.css
desktop/webapp/: index.html  package-lock.json  package.json  vite.config.ts
desktop/webapp/src/: App.tsx  api.test.ts  api.ts  index.css  store.test.ts  store.ts
docs/superpowers/plans/: 2026-06-20-phase1-backend-host-swap.md  2026-06-20-phase2-search-scrape-ui.md  2026-06-20-phase3-controlled-browser.md  2026-07-02-embedded-llm-engine.md  2026-07-08-case-the-gallery.md
docs/superpowers/specs/: 2026-06-20-bow-image-studio-design.md  2026-06-21-scraper-reliability-curation-design.md  2026-06-23-browser-primary-scraping-design.md  2026-06-23-scraper-source-prune-vision-qa-design.md  2026-06-23-working-slot-preview-design.md  2026-06-24-site-connections-edge-default-design.md  2026-06-28-bin-reuse-dedup-resume-design.md  2026-07-02-embedded-llm-design.md  2026-07-08-case-the-gallery-design.md
extension/: manifest.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
extension/src/background/: service-worker.ts
extension/src/content/: page-extractor.ts
extension/src/sidepanel/: App.tsx  index.html  main.tsx
(+17 files in other folders)
