[package]
name = "bow-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "bow_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "bow-desktop"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
socket2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2"
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
base64 = "0.22"
dom_smoothie = "0.18"
image = { version = "0.25", features = ["png"] }
image_hasher = "3.1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
tray-icon = "0.19"
tao = "0.30"
chromiumoxide = "0.9.1"
url = "2.5.8"
